--- a/index.html
+++ b/index.html
@@ -61,13 +61,7 @@
                 <!------------------------ CONTENIDO PRINCIPAL ------------------------>
                 <div class="contenido-principal">
 
-                    <iframe src="html/contacto.html"> </iframe>
-
-                    <!-- <iframe src="html/miarchivo.html"> </iframe> -->
-
-                    <!-- <iframe src="html/informes.html"> </iframe> -->
-
-                    <!-- <iframe src="html/contacto.html"> </iframe> -->
+                    <iframe src="html/pizarra.html"> </iframe>
                     
                 </div>
             </main>
